--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Wealth of Nature</h1>
+      <h1>Wealth of Naturee</h1>
     </header>
     <main>
       <section class="intro">
